--- a/src/styles/partials/_form.scss
+++ b/src/styles/partials/_form.scss
@@ -2,63 +2,59 @@
 
 img {
   color: white;
-  height: 100px;
   width: 100px;
+}
+.wrapper {
+  margin: 0 auto;
+  max-width: 90vw;
 }
 
 #form-section {
+  .wrapper {
+    text-align: center;
+  }
   height: 100vh;
   background: black;
   display: flex;
   justify-content: center;
-    .form-container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin-top: 20vh;
+  align-items: center;
+  .input-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  input[type="text"] {
+    width: 300px;
+    padding-bottom: 2px;
+    // margin: 10px 0;
+    background: transparent;
+    border: transparent;
+    border-bottom: 1px solid white;
+    color: white;
+    text-align: center;
+    &::placeholder {
+      color: white;
     }
-    .input-container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    label {
-        margin-right: 10px;
-        margin-bottom: 5px;
-        color: white;
-    }
-    input[type="text"] {
-        width: 300px;
-        padding: 10px 0;
-        margin: 10px 0;
-        background:transparent;
-        border: transparent;
-        border-bottom: 1px solid white;
-        color: white;
-        text-align: center;
-        &::placeholder {
-            color: white;
-        }
-    }
-    .icons-container {
-        margin: 50px 0;
-        display: flex;
-        justify-content: center;
-    }
+  }
+  .icons-container {
+    margin: 50px 0;
+    display: flex;
+    justify-content: center;
+  }
 }
 
-input[type="submit"], 
+input[type="submit"],
 .sort-result button {
-    margin-top: 20px;
-    padding: 10px;
-    width: 200px;
-    height: 50px;
-    background: transparent;
-    color: white;
-    transition: .15s ease-out;
-    border: 1px solid white;
-    &:hover {
-        background: white;
-        color: black;
-    }
+  margin-top: 20px;
+  padding: 10px;
+  width: 200px;
+  height: 50px;
+  background: transparent;
+  color: white;
+  transition: 0.15s ease-out;
+  border: 1px solid white;
+  &:hover {
+    background: white;
+    color: black;
+  }
 }
