--- a/src/styles/partials/_list.scss
+++ b/src/styles/partials/_list.scss
@@ -1,90 +1,62 @@
 .house-list {
-  width: 100%;
-  height: 100%;
-  padding: 50px;
+  padding: 150px 0 50px 0;
   text-align: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-ul {
-  width: 100%;
-  max-height: 80vh;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  align-items: center;
-
-}
-
-li {
-  margin: 10px 0;
-  padding: 4px 0;
-  width: 20%;
-  position: relative;
-}
-
-li::before {
-    width: 50%;
-    height: 1px;
-    bottom: -10px;
-    left: 25%;
-    background: rgba(255,255,255,0.1);
-    z-index: 10;
-}
-
-li::after{
-    bottom: -11px;
-    left: 50%;
-    width: 3px;
-    height: 3px;
-    border-radius: 50px;
-    z-index: 20;
+  background: rgba(0, 0, 0, 0.3);
+  ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  li {
+    font-size: 2.2rem;
+    margin-bottom: 10px;
+    line-height: 1.2;
+    width: 33.3333%;
+  }
 }
 
 #Ravenclaw li::after,
-.detail-item::after{
-    background: rgb(148,107,45);
+.detail-item::after {
+  background: rgb(148, 107, 45);
 }
 
 #Gryffindor li::after,
 .detail-item::after {
-    background: rgb(238,186,48);
+  background: rgb(238, 186, 48);
 }
 
 #Hufflepuff li::before {
-    background: rgba(114,98,85, 0.4);
+  background: rgba(114, 98, 85, 0.4);
 }
 
 #Hufflepuff li::after,
 .detail-item::after {
-    background: rgba(55,46,41, 0.8);
+  background: rgba(55, 46, 41, 0.8);
 }
 
 #Slytherin li::before {
-    background: rgba(255,255,255,0.1);
+  background: rgba(255, 255, 255, 0.1);
 }
 
 #Slytherin li::after,
 .detail-item::after {
-    background: rgba(170,170,170,0.5);
+  background: rgba(170, 170, 170, 0.5);
 }
 
-
-
-@media (max-width: 1115px) {
- ul {
-     flex-wrap: no-wrap;
-     max-height: 100%;
- }
-    li {
-    width: 50%;
- 
+@media (max-width: 980px) {
+  .house-list li {
+    width: calc(33.333% - 50px);
+  }
 }
+
+@media (max-width: 767px) {
+  .house-list li {
+    width: calc(50% - 50px);
+  }
 }
-// }li {
-//   margin: 10px 0;
-//   padding: 4px 0;
-//   width: 20%;
-//   position: relative;
-// }
+
+@media (max-width: 500px) {
+  .house-list li {
+    width: 100%;
+  }
+}
