--- a/src/styles/partials/_typography.scss
+++ b/src/styles/partials/_typography.scss
@@ -3,23 +3,27 @@ html {
 }
 
 body {
-  font-family: 'Gothic A1', sans-serif;
-  font-family: 'Lato', sans-serif;
-  font-family: 'IM Fell English', serif;
-  font-size: 2.5rem;
+  font-family: "Gothic A1", sans-serif;
+  font-family: "Lato", sans-serif;
+  font-family: "Mukta", sans-serif;
+  font-size: 2rem;
   color: ghostwhite;
-
+  font-weight: 200;
 }
 
-h1, h2, h3 {
-  font-family: 'IM Fell English', serif;
- 
+h1,
+h2,
+h3 {
+  font-family: "Mukta", sans-serif;
+  font-weight: 600;
+  text-transform: uppercase;
 }
-
-h1 {
-  font-size: 6.5rem;
+#form-section {
+  h1 {
+    font-size: 5vmax;
+    line-height: 1;
+  }
 }
-
 h2 {
   font-size: 3.5rem;
   margin-bottom: 25px;
@@ -33,58 +37,75 @@ h3 {
 
 input[type="text"] {
   font-size: 2.2rem;
-    &::placeholder {
-      text-align: center;
-      font-style: italic;
-    }
+  &::placeholder {
+    text-align: center;
+    font-style: italic;
+  }
 }
 
 .sort-result {
   p {
-    font-family: 'IM Fell English', serif;
     font-size: 4rem;
   }
   .result-house {
-      font-family: 'IM Fell English', serif;
-      font-size: 9rem;
-      text-transform: capitalize;
+    font-size: 16vw;
+    text-transform: uppercase;
+    font-weight: 600;
   }
   .Hufflepuff {
     color: #ecb939;
   }
   .Ravenclaw {
-    color: #222f5b ;
+    color: #222f5b;
   }
   .Gryffindor {
     color: #740001;
   }
   .Slytherin {
-    color: 	#2a623d ;
+    color: #2a623d;
   }
-
 }
 
-
-.user-name, 
-.detail-head {
-  font-family: 'IM Fell English', serif;
-  font-weight: bold;
+#Gryffindor,
+#Hufflepuff,
+#Ravenclaw,
+#Slytherin {
+  header h1 {
+    font-size: 15vw;
+    text-transform: uppercase;
+  }
+}
+.house-details {
+  h2 {
+    font-size: 3rem;
+    letter-spacing: 0rem;
+  }
+  p {
+    font-family: "Vollkorn", serif;
+    font-size: 5rem;
+    font-style: italic;
+    line-height: 1;
+  }
 }
 
-.user-name {
-  font-size: 5rem;
-  font-style: italic;
-}
+// .user-name,
+// .detail-head {
+//   font-weight: bold;
+// }
 
-.spell {
-  font-weight: bold;
-}
-.spell-effect {
-  font-style: italic;
-}
+// .user-name {
+//   font-size: 5rem;
+//   font-style: italic;
+// }
 
-.detail-head {
-  font-style: italic;
-  font-size: 2.5rem;
+// .spell {
+//   font-weight: bold;
+// }
+// .spell-effect {
+//   font-style: italic;
+// }
 
-}
+// .detail-head {
+//   font-style: italic;
+//   font-size: 2.5rem;
+// }
