--- a/src/styles/partials/_dashboard.scss
+++ b/src/styles/partials/_dashboard.scss
@@ -73,29 +73,11 @@ $white: ghostwhite;
   }
 }
 
-// @media (max-width: 930px) {
-//   #Hufflepuff {
-//     background-position: 25%;
-//   }
-// }
-
-// @media (max-width: 725px) {
-//   #Gryffindor {
-//     background-position: 33%;
-//   }
-//   #Ravenclaw {
-//     background-position: 25%;
-//   }
-//   #Slytherin {
-//     background-position: 60%;
-//   }
-// }
 .house-details {
   background: rgba(0, 0, 0, 0.1);
   width: 100%;
   .wrapper {
     padding: 0 20%;
-    // border: 1px solid blue;
   }
   h2 {
     position: relative;
@@ -126,11 +108,6 @@ $white: ghostwhite;
   padding: 125px 0;
 }
 
-@media (max-width: 768px) {
-  .detail:nth-of-type(odd) {
-    background: black;
-  }
-}
 .detail:nth-of-type(even) {
   background: rgba(0, 0, 0, 0.2);
   padding: 150px 0;
@@ -154,11 +131,6 @@ $white: ghostwhite;
   border-width: 80px 0 0 100vw;
   border-color: transparent transparent transparent rgba(0, 0, 0, 0.73);
 }
-@media (max-width: 768px) {
-  .detail:nth-of-type(1)::before {
-    border-color: transparent transparent transparent black;
-  }
-}
 
 .detail:nth-of-type(2)::before {
   top: 0;
@@ -178,48 +150,41 @@ $white: ghostwhite;
   border-color: transparent transparent transparent rgba(0, 0, 0, 0.62);
 }
 
-@media (max-width: 870px) {
-  .house-details {
-    .wrapper {
-      padding: 0 0;
-    }
-  }
-}
-
-@media (max-width: 870px) {
-  .detail:nth-of-type(even),
-  .detail:nth-of-type(odd) {
-    h2,
-    p {
-      text-align: center;
-    }
-  }
-}
-
+/////
+/// MEDIA QUERIES
+////
 @media (max-width: 768px) {
   #Gryffindor {
-    background: $gryffindor1;
+    .house-details, .house-list {
+      background: $gryffindor1;
+    }
     header {
       background: radial-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7)),
         url(../assets/lion2.jpg);
     }
   }
   #Hufflepuff {
-    background: $hufflepuff1;
+    .house-details, .house-list {
+      background: $hufflepuff1;
+    }
     header {
       background: radial-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7)),
         url(../assets/badger1.jpg);
     }
   }
   #Ravenclaw {
-    background: $ravenclaw1;
+    .house-details, .house-list {
+      background: $ravenclaw1;
+    }
     header {
       background: radial-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)),
         url(../assets/raven1.jpg);
     }
   }
   #Slytherin {
-    background: $slytherin1;
+    .house-details, .house-list {
+      background: $slytherin1;
+    }
     header {
       background: radial-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
         url(../assets/snake2.jpg);
@@ -234,6 +199,24 @@ $white: ghostwhite;
       background-position: center;
       background-repeat: no-repeat;
       background-attachment: scroll;
+    }
+  }
+  @media (max-width: 768px) {
+    .detail:nth-of-type(odd) {
+      background: black;
+    }
+  }
+  .detail:nth-of-type(3)::after {
+    border-color: transparent transparent transparent black;
+  }
+  .detail:nth-of-type(1)::before {
+    border-color: transparent transparent transparent black;
+  }
+  .detail:nth-of-type(even),
+  .detail:nth-of-type(odd) {
+    h2,
+    p {
+      text-align: center;
     }
   }
 }
