--- a/src/styles/partials/_form.scss
+++ b/src/styles/partials/_form.scss
@@ -36,7 +36,7 @@ img {
       color: white;
     }
     &:focus {
-        color: none;
+      color: none;
     }
   }
   .icons-container {
@@ -49,15 +49,21 @@ img {
 input[type="submit"],
 .sort-result button {
   margin-top: 20px;
-  padding: 10px;
-  width: 200px;
   height: 50px;
   background: transparent;
   color: white;
   transition: 0.15s ease-out;
   border: 1px solid white;
+  padding: 0 30px;
+
   &:hover {
     background: white;
     color: black;
   }
+}
+
+.sort-result button {
+  display: flex;
+  align-items: center;
+  padding: 0 30px;
 }
