--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -241,7 +241,8 @@ img {
 
 .wrapper {
   margin: 0 auto;
-  max-width: 90vw; }
+  max-width: 90vw;
+  max-width: 1280px; }
 
 #form-section {
   height: 100vh;
@@ -318,7 +319,7 @@ input[type="submit"],
   .sort-result .anim4 {
     animation: slideInUp 1s; }
 
-.font-awesome-icon {
+.arrow-right {
   padding-left: 10px;
   font-size: 3rem; }
 
@@ -353,23 +354,35 @@ input[type="submit"],
     opacity: 1;
     transform: scale(1); } }
 
+.arrow-down {
+  font-size: 3rem;
+  animation: bounce 2s infinite; }
+
+@keyframes bounce {
+  0% {
+    transform: translateY(5px); }
+  50% {
+    transform: translateY(-5px); }
+  100% {
+    transform: translateY(5px); } }
+
 #Gryffindor {
-  background: radial-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7)), url(../assets/lion2.jpg); }
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../assets/lion2.jpg); }
   #Gryffindor .house-details h2::before {
-    background: #ae0001; }
+    background: #530001; }
 
 #Ravenclaw {
-  background: radial-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)), url(../assets/raven1.jpg); }
+  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../assets/raven1.jpg); }
   #Ravenclaw .house-details h2::before {
-    background: #222f5b; }
+    background: #0e1a40; }
 
 #Hufflepuff {
-  background: radial-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7)), url(../assets/badger1.jpg); }
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../assets/badger1.jpg); }
   #Hufflepuff .house-details h2::before {
     background: #ecb939; }
 
 #Slytherin {
-  background: radial-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../assets/snake2.jpg); }
+  background: url(../assets/snake2.jpg); }
   #Slytherin .house-details h2::before {
     background: #2a623d; }
 
@@ -382,13 +395,6 @@ input[type="submit"],
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed; }
-  #Gryffindor .wrapper,
-  #Hufflepuff .wrapper,
-  #Ravenclaw .wrapper,
-  #Slytherin .wrapper {
-    margin: 0 auto;
-    width: 90%;
-    max-width: 1280px; }
   #Gryffindor header,
   #Hufflepuff header,
   #Ravenclaw header,
@@ -397,11 +403,16 @@ input[type="submit"],
     display: flex;
     align-items: center;
     padding: 0 4vw; }
+    #Gryffindor header .wrapper,
+    #Hufflepuff header .wrapper,
+    #Ravenclaw header .wrapper,
+    #Slytherin header .wrapper {
+      text-align: center; }
     #Gryffindor header h1,
     #Hufflepuff header h1,
     #Ravenclaw header h1,
     #Slytherin header h1 {
-      color: rgba(255, 255, 255, 0.6); }
+      color: rgba(255, 255, 255, 0.8); }
 
 .house-details {
   background: rgba(0, 0, 0, 0.1);
@@ -410,13 +421,11 @@ input[type="submit"],
     padding: 0 20%; }
   .house-details h2 {
     position: relative;
-    margin-bottom: 25px; }
-  .house-details h2::before {
-    content: "";
-    position: absolute;
-    top: 45px;
-    width: 100px;
-    height: 8px; }
+    margin-bottom: 25px;
+    border-bottom: 2px solid #ecb939;
+    display: inline-block;
+    padding: 0 20px 0 0;
+    line-height: 1.2; }
   .house-details p {
     top: -30px; }
   .house-details h2,
@@ -433,9 +442,10 @@ input[type="submit"],
 .detail:nth-of-type(even) {
   background: rgba(0, 0, 0, 0.2);
   padding: 150px 0; }
-  .detail:nth-of-type(even) h2,
-  .detail:nth-of-type(even) p {
+  .detail:nth-of-type(even) .wrapper {
     text-align: right; }
+  .detail:nth-of-type(even) h2 {
+    padding: 0 0 0 20px; }
 
 .detail:nth-of-type(odd)::before,
 .detail:nth-of-type(even)::before,
@@ -466,22 +476,26 @@ input[type="submit"],
   border-color: transparent transparent transparent rgba(0, 0, 0, 0.62); }
 
 @media (max-width: 768px) {
-  #Gryffindor .house-details, #Gryffindor .house-list {
-    background: #ae0001; }
+  #Gryffindor .house-details,
+  #Gryffindor .house-list {
+    background: #530001; }
   #Gryffindor header {
-    background: radial-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7)), url(../assets/lion2.jpg); }
-  #Hufflepuff .house-details, #Hufflepuff .house-list {
+    background: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../assets/lion2.jpg); }
+  #Hufflepuff .house-details,
+  #Hufflepuff .house-list {
     background: #ecb939; }
   #Hufflepuff header {
-    background: radial-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7)), url(../assets/badger1.jpg); }
-  #Ravenclaw .house-details, #Ravenclaw .house-list {
-    background: #222f5b; }
+    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../assets/badger1.jpg); }
+  #Ravenclaw .house-details,
+  #Ravenclaw .house-list {
+    background: #0e1a40; }
   #Ravenclaw header {
-    background: radial-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)), url(../assets/raven1.jpg); }
-  #Slytherin .house-details, #Slytherin .house-list {
+    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../assets/raven1.jpg); }
+  #Slytherin .house-details,
+  #Slytherin .house-list {
     background: #2a623d; }
   #Slytherin header {
-    background: radial-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../assets/snake2.jpg); }
+    background: url(../assets/snake2.jpg); }
   #Gryffindor header,
   #Hufflepuff header,
   #Ravenclaw header,
@@ -489,22 +503,22 @@ input[type="submit"],
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    background-attachment: scroll; } }
-
-@media (max-width: 768px) and (max-width: 768px) {
+    background-attachment: scroll; }
+  .detail:nth-of-type(even) {
+    padding: 125px 0; }
   .detail:nth-of-type(odd) {
-    background: black; } }
-
-@media (max-width: 768px) {
+    background: black;
+    padding: 75px 0; }
   .detail:nth-of-type(3)::after {
     border-color: transparent transparent transparent black; }
   .detail:nth-of-type(1)::before {
     border-color: transparent transparent transparent black; }
+  .detail:nth-of-type(even) .wrapper,
+  .detail:nth-of-type(odd) .wrapper {
+    text-align: center; }
   .detail:nth-of-type(even) h2,
-  .detail:nth-of-type(even) p,
-  .detail:nth-of-type(odd) h2,
-  .detail:nth-of-type(odd) p {
-    text-align: center; } }
+  .detail:nth-of-type(odd) h2 {
+    padding: 0 0 0 0; } }
 
 @media (max-width: 450px) {
   .house-details h2 {
